--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <script>
         function name(params) {
             let hello = 'hello';
-            console.log(hello);
+            console.log(hello123);
         }
         name();
+
     </script>
 </body>
 </html>
