--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script>
         function name(params) {
             let hello = 'hello';
-            console.log(hello123);
+            console.log(hello123986531456776);
+            const i;
         }
         name();
 
