--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             console.log(hello123);
         }
         name();
+        function name(params) {
+                let hello = 'hello';
+                console.log(hello123);
+            }
+            name();
 
     </script>
 </body>
